{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 75,
  "lineage": "2ced6ab8-9011-a690-7c4b-695a899c2dc5",
  "resources": [
    {
      "module": "module.vpc-creation",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devops-internet-gateway",
      "provider": "module.vpc-creation.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:600627316256:internet-gateway/igw-05d8a858423d9d6e4",
            "id": "igw-05d8a858423d9d6e4",
            "owner_id": "600627316256",
            "tags": {
              "Name": "DevOps-Internet-Gateway"
            },
            "tags_all": {
              "Name": "DevOps-Internet-Gateway"
            },
            "vpc_id": "vpc-0adebd843ab930a8e"
          },
          "dependencies": [
            "module.vpc-creation.aws_vpc.devops-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-creation",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops-private-route-table",
      "provider": "module.vpc-creation.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:600627316256:route-table/rtb-0038704e828faf4bd",
            "id": "rtb-0038704e828faf4bd",
            "owner_id": "600627316256",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "DevOps-Private-Route-Table"
            },
            "tags_all": {
              "Name": "DevOps-Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adebd843ab930a8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-creation.aws_vpc.devops-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-creation",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops-public-route-table",
      "provider": "module.vpc-creation.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:600627316256:route-table/rtb-01ff7aff16704a7e3",
            "id": "rtb-01ff7aff16704a7e3",
            "owner_id": "600627316256",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05d8a858423d9d6e4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DevOps-Public-Route-Table"
            },
            "tags_all": {
              "Name": "DevOps-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adebd843ab930a8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-creation.aws_internet_gateway.devops-internet-gateway",
            "module.vpc-creation.aws_vpc.devops-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-creation",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devops-private-route-table-association",
      "provider": "module.vpc-creation.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c87fe50ff351e96",
            "route_table_id": "rtb-0038704e828faf4bd",
            "subnet_id": "subnet-05fe4d909029f4183"
          },
          "dependencies": [
            "module.vpc-creation.aws_route_table.devops-private-route-table",
            "module.vpc-creation.aws_subnet.devops-private-subnet",
            "module.vpc-creation.aws_vpc.devops-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6dff76a0807e459",
            "route_table_id": "rtb-0038704e828faf4bd",
            "subnet_id": "subnet-075706cbaa5431266"
          },
          "dependencies": [
            "module.vpc-creation.aws_route_table.devops-private-route-table",
            "module.vpc-creation.aws_subnet.devops-private-subnet",
            "module.vpc-creation.aws_vpc.devops-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-creation",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devops-public-route-table-association",
      "provider": "module.vpc-creation.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a5a0769de4facbf",
            "route_table_id": "rtb-01ff7aff16704a7e3",
            "subnet_id": "subnet-05a7fceb8359e03f9"
          },
          "dependencies": [
            "module.vpc-creation.aws_internet_gateway.devops-internet-gateway",
            "module.vpc-creation.aws_route_table.devops-public-route-table",
            "module.vpc-creation.aws_subnet.devops-public-subnet",
            "module.vpc-creation.aws_vpc.devops-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092ae1f3f1583a298",
            "route_table_id": "rtb-01ff7aff16704a7e3",
            "subnet_id": "subnet-09bc8c24e9294542c"
          },
          "dependencies": [
            "module.vpc-creation.aws_internet_gateway.devops-internet-gateway",
            "module.vpc-creation.aws_route_table.devops-public-route-table",
            "module.vpc-creation.aws_subnet.devops-public-subnet",
            "module.vpc-creation.aws_vpc.devops-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-creation",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops-security-group",
      "provider": "module.vpc-creation.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:600627316256:security-group/sg-01c3f1016eb1cc16c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c3f1016eb1cc16c",
            "ingress": [
              {
                "cidr_blocks": [
                  "103.16.69.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240822142840950100000003",
            "name_prefix": "terraform-",
            "owner_id": "600627316256",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DevOps-Security-Group"
            },
            "tags_all": {
              "Name": "DevOps-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0adebd843ab930a8e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-creation.aws_vpc.devops-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-creation",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops-private-subnet",
      "provider": "module.vpc-creation.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:600627316256:subnet/subnet-05fe4d909029f4183",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fe4d909029f4183",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "600627316256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DevOps-Private-Subnet-0"
            },
            "tags_all": {
              "Name": "DevOps-Private-Subnet-0"
            },
            "vpc_id": "vpc-0adebd843ab930a8e"
          },
          "dependencies": [
            "module.vpc-creation.aws_vpc.devops-vpc",
            "module.vpc-creation.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:600627316256:subnet/subnet-075706cbaa5431266",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075706cbaa5431266",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "600627316256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DevOps-Private-Subnet-1"
            },
            "tags_all": {
              "Name": "DevOps-Private-Subnet-1"
            },
            "vpc_id": "vpc-0adebd843ab930a8e"
          },
          "dependencies": [
            "module.vpc-creation.aws_vpc.devops-vpc",
            "module.vpc-creation.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-creation",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops-public-subnet",
      "provider": "module.vpc-creation.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:600627316256:subnet/subnet-05a7fceb8359e03f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a7fceb8359e03f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "600627316256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DevOps-Public-Subnet-0"
            },
            "tags_all": {
              "Name": "DevOps-Public-Subnet-0"
            },
            "vpc_id": "vpc-0adebd843ab930a8e"
          },
          "dependencies": [
            "module.vpc-creation.aws_vpc.devops-vpc",
            "module.vpc-creation.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:600627316256:subnet/subnet-09bc8c24e9294542c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bc8c24e9294542c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "600627316256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DevOps-Public-Subnet-1"
            },
            "tags_all": {
              "Name": "DevOps-Public-Subnet-1"
            },
            "vpc_id": "vpc-0adebd843ab930a8e"
          },
          "dependencies": [
            "module.vpc-creation.aws_vpc.devops-vpc",
            "module.vpc-creation.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-creation",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops-vpc",
      "provider": "module.vpc-creation.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:600627316256:vpc/vpc-0adebd843ab930a8e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_route_table_id": "rtb-0015805add52f6035",
            "default_security_group_id": "sg-040a1f2f4a530aeaf",
            "dhcp_options_id": "dopt-064dadcd8a69a4fa2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0adebd843ab930a8e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0015805add52f6035",
            "owner_id": "600627316256",
            "tags": {
              "Name": "DevOps-VPC"
            },
            "tags_all": {
              "Name": "DevOps-VPC"
            }
          }
        }
      ]
    }
  ]
}